--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html class="no-js" lang="fr-FR">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125429015-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
- function gtag(){dataLayer.push(arguments);}
- gtag('js', new Date());  gtag('config', 'UA-125429015-1');
-</script>
 	<meta charset="utf-8">
-	<title>Warp Code</title>
-	<meta name="description" lang="fr" content="Warp Code Agence Web Creative a Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
+	<title>Agence Web Créative de développement de sites internet et applications web à Vannes</title>
+	<meta name="description" lang="fr" content="Warp Code Agence Web Créative à Vannes. Nous créons et développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels. ">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="publisher" content="WarpCode56">
-	<meta name="keywords" lang="fr" content="développement web, agence, responsive, design, application web, Vannes, Morbihan">
-	<meta name="reply-to" content="contact@warp-code.fr">
+	<meta name="keywords" lang="fr" content="développement web, agence, responsive, design, application web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne">
 	<meta name="robots" content="index, follow">
 	<meta name="distribution" content="global">
 	<meta name="author" content="Sebastien CHAMPALAUNE, Florent SADOT, Cedric LE TALLEC">
@@ -24,6 +16,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
+	<meta name="language" content="fr">
 	<meta http-equiv="X-UA-compatible" content="IE=edge" />
 	<!--******************Meta Facebook**************-->
 	<meta property="og:title" content="Warp-Code, Agence Web Créative" />
@@ -48,7 +41,8 @@
 	<link rel="stylesheet" href="css/retina.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<!-- ==================================================Favicons	================================================== -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
 	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
@@ -74,10 +68,10 @@
 	<nav class="menu">
 		<div class="logo"></div>
 		<ul>
-			<li class="close-menu"><a href="#home">Accueil</a></li>
-			<li class="close-menu"><a href="#services">Services</a></li>
-			<li class="close-menu"><a href="#team">Team</a></li>
-			<li class="close-menu"><a href="#contactForm">Contact</a></li>
+			<li class="close-menu"><a href="#home" title="Retour en haut de page">Accueil</a></li>
+			<li class="close-menu"><a href="#services" title="Accès à la section Services">Services</a></li>
+			<li class="close-menu"><a href="#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
+			<li class="close-menu"><a href="#contactForm" title="Accès aux informations de contact">Contact</a></li>
 		</ul>
 	</nav>
 	<div class="burger">
@@ -89,10 +83,10 @@
 	</div>
 	<div class="mask3"></div>
 	<!--================================================== HEADER    ================================================== -->
-	<header class="section full-height back-dark" style="background: black;" id="home">
-		<video id="videoBackground" class="banniere" autoplay>
-			<source src="videos/warp1.mp4" /></video>
-		<div id="wrapLogo"><img src="images/poster.png" class="poster" alt="logo de l'entreprise"></div>
+	<header class="section full-height back-dark" id="home">
+		<video id="videoBackground" alt="vidéo de présentation du logo et du nom de l'Agence" class="banniere" autoplay>
+			<source src="videos/warp1.mp4" type="video/mp4" /></video>
+		<div id="wrapLogo"><h1><img src="images/poster.png" class="poster" alt="logo plein écran de l'entreprise"></h1></div>
 		<a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="link-down fade-elements"></div>
 		</a>
@@ -208,7 +202,7 @@
 			<div class="section back-dark">
 				<div class="parallax-3"></div>
 				<div class="dark-over-sep"></div>
-				<div class="services-bottom-link" style="font-size:50px;">Notre activité </div>
+				<div class="services-bottom-link">Notre activité </div>
 			</div>
 		</a>
 		<!--================================================== Services  ================================================== -->
@@ -302,7 +296,7 @@
 				<div class="teamCard">
 
 					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
-						<div class="card"><img src="images/team1.png" />
+						<div class="card"><img src="images/team1.png" alt="Photo portrait de Sébastien" />
 							<div class="info">
 								<h4>Créative développeur</h4>
 								<p>39 ans
@@ -311,7 +305,7 @@
 								<div class="social-team">
 									<ul class="list-social-team">
 										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-											<a href="https://www.linkedin.com/in/sébastien-champalaune/"><i class="fab fa-linkedin-in"></i></a>
+											<a href="https://www.linkedin.com/in/sébastien-champalaune/" title="lien externe vers le profil LinkedIn de Sébastien Champalaune"><i class="fab fa-linkedin-in"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -320,7 +314,7 @@
 						<h4>Sébastien Champalaune</h4>
 					</article>
 					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
-						<div class="card"><img src="images/team2.png" />
+						<div class="card"><img src="images/team2.png" alt="Photo portrait de Florent"/>
 							<div class="info">
 								<h4>Développeur front / back end</h4>
 								<p>37 ans
@@ -329,7 +323,7 @@
 								<div class="social-team">
 									<ul class="list-social-team">
 										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-											<a href="https://www.linkedin.com/in/florent-sadot/"><i class="fab fa-linkedin-in"></i></a>
+											<a href="https://www.linkedin.com/in/florent-sadot/" title="lien externe vers le profil LinkedIn de Florent Sadot"><i class="fab fa-linkedin-in"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -338,7 +332,7 @@
 						<h4>Florent Sadot</h4>
 					</article>
 					<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.8s after 0.2s">
-						<div class="card"><img src="images/team3.png" />
+						<div class="card"><img src="images/team3.png" alt="Photo portrait de Cédric"/>
 							<div class="info">
 								<h4>Développeur front / back end</h4>
 								<p>36 ans
@@ -347,7 +341,7 @@
 								<div class="social-team">
 									<ul class="list-social-team">
 										<li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-											<a href="https://www.linkedin.com/in/cédric-le-tallec/"><i class="fab fa-linkedin-in"></i></a>
+											<a href="https://www.linkedin.com/in/cédric-le-tallec/" title="lien externe vers le profil LinkedIn de Cédric Le Tallec" ><i class="fab fa-linkedin-in"></i></a>
 										</li>
 									</ul>
 								</div>
@@ -520,13 +514,13 @@
 				<div class="twelve columns center-item" data-scroll-reveal="enter bottom move 150px over 0.7s after 0.2s">
 					<div id="owl-logos" class="owl-carousel owl-theme">
 						<article class="item">
-							<img src="images/logos/sara.png" alt="logo de saraphotographie" />
+							<img src="images/logos/sara.png" alt="logo de Sara Photographie" />
 						</article>
 						<article class="item">
-							<a href="http://www.luminisprod.com"><img src="images/logos/luminis.png" alt="logo Luminis Prod" /></a>
+							<a href="http://www.luminisprod.com" title="lien externe vers le site de LuminisProd"><img src="images/logos/luminis.png" alt="logo Luminis Prod" /></a>
 						</article>
 						<article class="item">
-							<img src="images/logos/tribus1.png" alt="logo tribus virtuelles" />
+							<img src="images/logos/tribus1.png" alt="logo de Tribus Virtuelles" />
 						</article>
 						<article class="item">
 							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
@@ -560,7 +554,7 @@
 							<p>1.
 								<span>écrivez-nous</span>
 							</p>
-							<h6>contact@warp-code.fr</h6>
+							<h6>veuilez remplir le formulaire ci-dessous</h6>
 						</div>
 						<article class="contact-det">
 							<p>2.
@@ -581,7 +575,7 @@
 		<!--================================================== FORMULAIRE DE CONTACT    ================================================== -->
 		<section class="section padding-bottom">
 			<div class="container">
-				<h2 style="margin-bottom:60px;">Un projet, une question ?</h2>
+				<h2>Un projet, une question ?</h2>
 				<form name="ajax-form" id="ajax-form" action="mail-it.php" method="post">
 					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<label for="name">
@@ -632,10 +626,10 @@
 					<div class="social-footer">
 						<ul class="list-social-footer">
 							<li class="icon-footer tipped" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}'>
-								<a href="https://twitter.com/code_warp"><i class="fab fa-twitter"></i></a>
+								<a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a>
 							</li>
 							<li class="icon-footer tipped" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}'>
-								<a href="https://www.facebook.com/WarpCode56"><i class="fab fa-facebook-f"></i></a>
+								<a href="https://www.facebook.com/WarpCode56" title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a>
 							</li>
 						</ul>
 					</div>
@@ -647,7 +641,7 @@
 			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 				<div class="left-footer">
 					<p>2018 © Warp Code, Agence Web Créative. Tous droits réservés.
-						<a class="mention-footer" href="mentions-legales.html">Mentions légales</a>
+						<a class="mention-footer" href="mentions-legales.html" title="lien interne vers la page de Mentions Légales">Mentions légales</a>
 					</p>
 				</div>
 			</article>
