--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	<meta name="twitter:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
+	<!-- <link rel="stylesheet" href="css/style.min.css" /> -->
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
@@ -648,14 +649,15 @@
 	</footer>
 	<script src="js/jquery-2.1.1.js"></script>
 	<script src="js/royal_preloader.min.js"></script>
-	<script src="js/plugins.js"></script>
+	<script src="js/script.js"></script>
+	<!-- <script src="js/plugins.js"></script>
 	<script src="js/masonry.js"></script>
 	<script src="js/isotope.js"></script>
-	<script src="js/map.js"></script>
+	<script src="js/map.js"></script> -->
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script src="js/contact.js"></script>
-	<script src="js/custom.js"></script>
+	<!-- <script src="js/contact.js"></script>
+	<script src="js/custom.js"></script> -->
 </body>
 
 </html>
