--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 		</div>
 	</footer>
 	<script src="js/jquery-2.1.1.js"></script>
-	<script src="js/royal_preloader.min.js"></script>
+	<!-- <script src="js/royal_preloader.min.js"></script> -->
 	<script src="js/script.js"></script>
 	<!-- <script src="js/plugins.js"></script>
 	<script src="js/masonry.js"></script>
