--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 	<meta name="twitter:description" content="Agence Web Créative installée à Vannes et réalisant vos sites internet vitrine, e-commerce et applications web." />
 	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
-	<!-- <link rel="stylesheet" href="css/style.min.css" /> -->
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
@@ -81,7 +80,7 @@
 	<header class="section full-height back-dark" id="home">
 		<video id="videoBackground" alt="vidéo de présentation du logo et du nom de l'Agence" class="banniere" autoplay>
 			<source src="videos/warp1.mp4" type="video/mp4" /></video>
-		<div id="wrapLogo"><h1><img src="images/poster.png" class="poster" alt="logo plein écran de l'entreprise"></h1></div>
+		<div id="wrapLogo"><h1>Warp-Code : Agence Web Creative, développement de sites internet</h1><img src="images/poster.png" class="poster" alt="logo plein écran de l'entreprise"></div>
 		<a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="link-down fade-elements"></div>
 		</a>
@@ -162,7 +161,7 @@
 					<div class="about-wrap">
 						<div class="about-icon">
 							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60.5 46.5" style="enable-background:new 0 0 60.5 46.5;"
+							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60.5 46.5" enable-background="new 0 0 60.5 46.5";
 							 xml:space="preserve">
 								<g>
 									<g>
@@ -294,7 +293,7 @@
 						<div class="card"><img src="images/team1.png" alt="Photo portrait de Sébastien" />
 							<div class="info">
 								<h4>Créative développeur</h4>
-								<p>39 ans
+								<p class="textCard">39 ans
 									<br />
 									Concepteur et intégrateur d'applications web</p>
 								<div class="social-team">
@@ -312,7 +311,7 @@
 						<div class="card"><img src="images/team2.png" alt="Photo portrait de Florent"/>
 							<div class="info">
 								<h4>Développeur front / back end</h4>
-								<p>37 ans
+								<p class="textCard">37 ans
 									<br />
 									Concepteur et intégrateur d'applications web</p>
 								<div class="social-team">
@@ -330,7 +329,7 @@
 						<div class="card"><img src="images/team3.png" alt="Photo portrait de Cédric"/>
 							<div class="info">
 								<h4>Développeur front / back end</h4>
-								<p>36 ans
+								<p class="textCard">36 ans
 									<br />
 									Concepteur et intégrateur d'applications web</p>
 								<div class="social-team">
