--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144-min.png">
 	<meta name="theme-color" content="#ffffff">
 	<meta name="language" content="fr">
-	<meta http-equiv="X-UA-compatible" content="IE=edge" />
 	<!--******************Meta Facebook**************-->
 	<meta property="og:title" content="Warp-Code, Agence Web Créative" />
 	<meta property="og:url" content="www.warp-code.fr" />
@@ -60,7 +59,6 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16-min.png">
 	<link rel="manifest" href="images/favicon//manifest.json">
 	<!-- ==================================================Script	================================================== -->
-	<script src="js/modernizr.custom.js"></script>
 	<noscript>Votre navigateur ne supporte pas JavaScript !</noscript>
 </head>
 
@@ -656,11 +654,11 @@
 					<div class="arrow-up-footer"></div>
 				</a>
 			</article>
-			<article class="two columns rightFoot" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3">
-				<div class="fb-like" data-href="https://www.warp-code.fr/" data-colorscheme="dark" data-width="300" data-layout="button"
+
+			<div class="fb-like two columns rightFoot" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3" data-href="https://www.warp-code.fr/" data-colorscheme="dark" data-width="300" data-layout="button"
 				 data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
 
-			</article>
+
 			<article class="two columns rightFoot" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3">
 					<a href="https://twitter.com/code_warp?ref_src=twsrc%5Etfw" title="lien externe pour nous suivre sur twitter" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-lang="fr" data-show-count="false">Nous suivre&nbsp;</a>
 				<div class="g-plus" data-action="share" data-height="28" data-href="https://www.warp-code.fr"></div>
