--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/styleMin.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" identity="sha384-MbqDluk7wV/mnD4NObbXJc4Y8PG19HZqaPJ1UG9uS5uoRZfVDqQWXkT7xqWzP+FT"
-	 crossorigin="anonymous" >
-	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" identity="sha384-MpukOIwua5Vmwaf/NPN24WHgXySJtEqEAMrFn/Cb2xxIXzEeS1JIV0W0nBIvRD5q"
-	 crossorigin="anonymous" >
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
+	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" >
 	<!-- ==================================================Favicons	================================================== -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
 	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60-min.png">
@@ -59,10 +57,11 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16-min.png">
 	<link rel="manifest" href="images/favicon//manifest.json">
 	<!-- ==================================================Script	================================================== -->
-	<noscript>Votre navigateur ne supporte pas JavaScript !</noscript>
+
 </head>
 
 <body class="royal_preloader">
+	<noscript>Votre navigateur ne supporte pas JavaScript !</noscript>
 	<div id="fb-root"></div>
 	<div id="royal_preloader"></div>
 	<!--==================================================MENU    ================================================== -->
@@ -85,7 +84,7 @@
 	<div class="mask3"></div>
 	<!--================================================== HEADER    ================================================== -->
 	<header class="section full-height back-dark" id="home">
-		<video id="videoBackground" alt="vidéo de présentation du logo et du nom de l'Agence" class="banniere" autoplay>
+		<video id="videoBackground" class="banniere" autoplay>
 			<source src="videos/warp1.mp4" type="video/mp4" /></video>
 		<div id="wrapLogo">
 			<h1>Warp-Code : Agence Web Creative, développement de sites internet</h1><img src="images/poster.png" class="poster"
@@ -170,7 +169,7 @@
 					<div class="about-wrap">
 						<div class="about-icon">
 							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60.5 46.5" enable-background="new 0 0 60.5 46.5" ;
+							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60.5 46.5" enable-background="new 0 0 60.5 46.5" 
 							 xml:space="preserve">
 								<g>
 									<g>
@@ -669,8 +668,8 @@
 	<script src="js/script.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script src="https://apis.google.com/js/platform.js" async defer> {lang: 'fr'} </script>
-	<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<script async src="https://platform.twitter.com/widgets.js"></script>
 </body>
 
 </html>
