--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 		<section class="section padding-bottom">
 			<div class="container">
 				<h2>Un projet, une question ?</h2>
-				<form name="ajax-form" id="ajax-form" action="mail-it.php" method="post">
+				<form name="ajax-form" id="ajax-form" action="app/mail-it.php" method="post">
 					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<label for="name">
 							<span class="error" id="err-name">Ce champ est requis !</span>
