--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 							<p>Ce que nous réalisons
 								<span>pour vous</span>
 							</p>
+							
 							<h3>Nous créons des projets adaptés à vos besoins.</h3>
+							<p><a href="app/siteA.php">Plus d'infos...</a></p> 
 						</div>
 					</article>
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
