--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Warp Code</title>
-    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, sites vitrine, sites e-commerce, applications web">
+    <title>Warp Code - Mentions Légales</title>
+    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, création de sites internet, vitrine, e-commerce et d'applications web">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="publisher" content="WarpCode56">
     <meta name="keywords" lang="fr" content="développemeent web, agence, responsive, design, application web, Vannes, Morbihan">
@@ -19,13 +19,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!--================================================== CSS  ================================================== -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/grid.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/color.css" />
-    <link rel="stylesheet" href="css/owl.carousel.css" />
-    <link rel="stylesheet" href="css/owl.transitions.css" />
-    <link rel="stylesheet" href="css/retina.css" />
+    <link rel="stylesheet" href="css/styleMin.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Nunito" rel="stylesheet">
@@ -45,7 +39,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png">
     <link rel="manifest" href="images/favicon//manifest.json">
     
-    <script type="text/javascript" src="js/modernizr.custom.js"></script>
 </head>
 
 <body>
@@ -53,7 +46,7 @@
 	<nav class="menu">
             <div class="logo"></div>
             <ul>
-                <li class="close-menu"><a href="https://www.warp-code.fr">Retour à l'acueil</a></li>
+                <li class="close-menu"><a href="https://www.warp-code.fr">Retour à l'accueil</a></li>
                
             </ul>
         </nav>
@@ -258,15 +251,8 @@
 
 
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
-    <script type="text/javascript" src="js/royal_preloader.min.js"></script>
-    <script type="text/javascript" src="js/plugins.js"></script>
-    <script type="text/javascript" src="js/masonry.js"></script>
-    <script type="text/javascript" src="js/isotope.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-    <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script type="text/javascript" src="js/contact.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+	<script src="js/script.js"></script>
+
 </body>
 
 </html>
