--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<video id="videoBackground" class="banniere" autoplay>
 			<source src="videos/warp1.mp4" type="video/mp4" /></video>
 		<div id="wrapLogo">
-			<h1>Warp-Code : Agence Web Creative, développement de sites internet</h1><img src="images/poster.png" class="poster"
+			<h1 id="h1MP">Warp-Code : Agence Web Creative, développement de sites internet</h1><img src="images/poster.png" class="poster"
 			 alt="logo plein écran de l'entreprise">
 		</div>
 		<a href="#about" title="Pour faire doucement glisser la page" data-gal="m_PageScroll2id" data-ps2id-offset="78">
@@ -217,7 +217,7 @@
 							</p>
 							
 							<h3>Nous créons des projets adaptés à vos besoins.</h3>
-							<p><a href="app/siteA.php">Plus d'infos...</a></p> 
+							<!-- <p><a href="app/siteA.php">Plus d'infos...</a></p>  -->
 						</div>
 					</article>
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
@@ -515,7 +515,7 @@
 				<div class="twelve columns center-item" data-scroll-reveal="enter bottom move 150px over 0.7s after 0.2s">
 					<div id="owl-logos" class="owl-carousel owl-theme">
 						<article class="item">
-							<img src="images/logos/sara.png" alt="logo de Sara Photographie" />
+							<a href="https://www.facebook.com/mariageabbydesign" title="lien externe vers le site Facebook de SaraPhotographie"></a><img src="images/logos/sara.png" alt="logo de Sara Photographie" />
 						</article>
 						<article class="item">
 							<a href="http://www.luminisprod.com" title="lien externe vers le site de LuminisProd"><img src="images/logos/luminis.png"
@@ -556,7 +556,7 @@
 							<p>1.
 								<span>écrivez-nous</span>
 							</p>
-							<h6>veuilez remplir le formulaire ci-dessous</h6>
+							<h6>veuillez remplir le formulaire ci-dessous</h6>
 						</div>
 						<article class="contact-det">
 							<p>2.
