--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="logo"></div>
 		<ul>
 			<li class="close-menu"><a href="#home" title="Retour en haut de page">Accueil</a></li>
-			<li class="close-menu"><a href="#services" title="Accès à la section Services">Services</a></li>
+			<li class="close-menu"><a href="services.html" title="Accès à la section Services">Services</a></li>
 			<li class="close-menu"><a href="#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
 			<li class="close-menu"><a href="#contactForm" title="Accès aux informations de contact">Contact</a></li>
 		</ul>
@@ -217,7 +217,7 @@
 							</p>
 							
 							<h3>Nous créons des projets adaptés à vos besoins.</h3>
-							<!-- <p><a href="app/siteA.php">Plus d'infos...</a></p>  -->
+							<p><a class="goToServ" href="https://www.warp-code.fr/app/services.html">Plus d'infos...</a></p> 
 						</div>
 					</article>
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
