--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -46,7 +46,7 @@
 	<nav class="menu">
             <div class="logo"></div>
             <ul>
-                <li class="close-menu"><a href="https://www.warp-code.fr">Retour à l'accueil</a></li>
+                <li class="close-menu"><a href="index.html">Retour à l'accueil</a></li>
                
             </ul>
         </nav>
