--- a/services.html
+++ b/services.html
@@ -196,29 +196,35 @@
 		
 					<img src="images/logo.png" alt="logo de l'entreprise" />
 
-
+					<div class="menMain">
 					<p>2018 © Warp Code, Agence Web Créative. Tous droits réservés.
 						<a class="mention-footer" href="mentions-legales.html" title="lien interne vers la page de Mentions Légales">Mentions
 							légales</a>
 					</p>
+					</div>
+					<!-- NOTRE TWITTER -->
+					<div class="mediaLinks">
+					<ul>
+					<li><a href="https://twitter.com/code_warp" class="FBTweet" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a></ul>
+					<!-- NOTRE FACEBOOK -->
+					<ul><a href="https://www.facebook.com/WarpCode56" class="FBTweet" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a></ul>
+				</ul>	
+					<!-- PARTAGER SUR TWITTER -->
+					<a href="http://twitter.com/share" class="twitter-share-button" data-count="vertical" data-via="WarpCode">Tweet</a>
+					<!-- FOLLOW TWITTER -->
+					<a href="https://twitter.com/code_warp?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="fr" data-show-count="false">Follow @code_warp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				
 
-					<a href="https://twitter.com/code_warp" title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a>
+					<!-- LIKE & SHARE FACEBOOK -->
+					<div class="fb-like" data-href="https://www.facebook.com/WarpCode56" data-width="100" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 
+					<!-- GOOGLE + SHARE -->
+					<g:plusone size="tall"></g:plusone>
 
+					<!-- LINKEDIN SHARE -->
+					<script type="IN/Share" data-url="https://www.linkedin.com/company/warp-code/"></script>
 
-
-
-<!-- twitter -->
-					<a href="http://twitter.com/share" class="twitter-share-button" 
-					data-count="vertical" data-via="InfoWebMaster">Tweet</a>
-				  
-<!-- 
-
-			<article class="twelve columns remove-top remove-bottom" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
-				<div class="footer-line"></div>
-			</article> -->
-			
-
+					</div>
 			
 
 	</footer>
@@ -230,7 +236,10 @@
 	<script src="js/jquery.jInvertScroll.js"></script>
 	<script src="js/scriptMin.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
-	<script async src="https://platform.twitter.com/widgets.js"></script>
+	<script async src="https://platform.twitter.com/widgets.js" async defer></script>
+	<script src="//platform.linkedin.com/in.js" type="text/javascript" async defer> lang: fr_FR</script>
+		
+		
 	<script type="text/javascript">
 		(function ($) {
 			$.jInvertScroll(['.scroll'], // an array containing the selector(s) for the elements you want to animate
