--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Warp Code - Services</title>
-	<meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
+	<meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, vitrine, e-commerce, applications web, webmastering, SEO, community management, redaction web, video, hebergement">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="publisher" content="WarpCode56">
 	<meta name="keywords" lang="fr" content="développement web, agence, responsive, design, application web, Vannes, Morbihan">
@@ -125,7 +125,7 @@
 						 transform="translate(-378.44 -332.17)" />
 						</svg>
 					</div>
-				<p class="whitey"><span class="coloR">Intégralité du Pack 1</span>  + </span></p>
+				<p class="whitey"><span class="coloR">Intégralité du Pack 1 + </span></p>
 				<ul>
 					<li class="spaceLine">- Rédaction du contenu</li>
 					<li class="spaceLine">- Rajout de nouvelles catégories</li>
@@ -172,7 +172,7 @@
 			transform="translate(-482.41 -222.4)" />
 						</svg>
 					</div>
-				<p> Nous pouvons rajouter à loisir toutes les fonctionnalités de votre choix même si elles n'ont pas été développées pour le projet initial.<br />Un nouveau devis et un avenant au contrat seront alors proposés.<br /> &nbsp; </p>
+				<p> Nous pouvons rajouter toutes les fonctionnalités de votre choix même si elles n'ont pas été développées pour le projet initial.<br />Un nouveau devis et un avenant au contrat seront alors proposés.<br /> &nbsp; </p>
 				<ul>
 					<li class="spaceLine">- Galerie d'images</li>
 					<li class="spaceLine">- Espace membre</li>
@@ -183,9 +183,9 @@
 					<li class="spaceLine"> ...</li>
 				</ul>
 				</div>
-				<a href="#about2" title="Pour faire doucement glisser la page" data-gal="m_PageScroll2id" data-ps2id-offset="-2350">
+				<!-- <a href="#about2" title="Pour faire doucement glisser la page" data-gal="m_PageScroll2id" data-ps2id-offset="-2350">
 						<div class="link-down fade-elements"></div>
-					</a>
+					</a> -->
 		</div>
 		<div class="page documentation vlockCol2">
 			<h2 class="h1Maintenance">Web-Marketing</h2>
@@ -323,16 +323,16 @@
 		
 					<p>Marketing pour les Moteurs de Recherche. C’est un terme qui englobe le référencement naturel et le référencement payant. On peut le réduire à l’équation suivante : <span class="whitey">SEO + SEA = SEM</span>.<br />Le but de cette approche marketing globale est de générer du trafic sur votre site.<br />En résumé, un bon référencement = une bonne visibilité sur les moteurs de recherche = du trafic plus important sur votre site = des profits pour vous, à terme.</p></div>
 				
-			</p>
+			
 		</div>
 
 	</section>
 
 		<div class="middle scroll">
-			<img src="images/ligne.png" alt="">
+			<img src="images/ligne.png" alt="première ligne de décoration du fond">
 		</div>
 		<div class="horizon scroll">
-			<img src="images/ligne2.png" alt="">
+			<img src="images/ligne2.png" alt="seconde ligne de décoration du fond">
 		</div>
 
 
@@ -344,7 +344,7 @@
 
 			<!-- logo -->
 		
-					<img src="images/logo.png" alt="logo de l'entreprise" />
+					<img class="logoFootMain" src="images/logo.png" alt="logo de l'entreprise" />
 
 					<div class="menMain">
 					<p>2018 © Warp Code, Agence Web Créative. Tous droits réservés.
@@ -355,27 +355,27 @@
 					<!-- NOTRE TWITTER -->
 					<div class="mediaLinks">
 					<ul>
-					<li><a href="https://twitter.com/code_warp" class="FBTweet" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a></ul>
+					<li class="johnny"><a href="https://twitter.com/code_warp" class="FBTweet" data-title="twitter" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Twitter de WarpCode"><i class="fab fa-twitter"></i></a></li></ul>
 					<!-- NOTRE FACEBOOK -->
-					<ul><a href="https://www.facebook.com/WarpCode56" class="FBTweet" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a></ul>
+					<ul><li class="johnny"><a href="https://www.facebook.com/WarpCode56" class="FBTweet" data-title="facebook" data-tipper-options='{"direction":"top","follow":"true"}' title="lien externe vers le compte Facebook de WarpCode"><i class="fab fa-facebook-f"></i></a></li>
 				</ul>	
 					<!-- PARTAGER SUR TWITTER -->
 					<a href="http://twitter.com/share" class="twitter-share-button" data-count="vertical" data-via="WarpCode">Tweet</a>
 					<!-- FOLLOW TWITTER -->
-					<a href="https://twitter.com/code_warp?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="fr" data-show-count="false">Follow @code_warp</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<a href="https://twitter.com/code_warp?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-screen-name="false" data-lang="fr" data-show-count="false">Follow @code_warp</a><script async src="https://platform.twitter.com/widgets.js"></script>
 				
 
 					<!-- LIKE & SHARE FACEBOOK -->
 					<div class="fb-like" data-href="https://www.facebook.com/WarpCode56" data-width="100" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
 
 					<!-- GOOGLE + SHARE -->
-					<g:plusone size="tall"></g:plusone>
+					<g:plus action="share" class="googlePlouche"></g:plus>
 
 					<!-- LINKEDIN SHARE -->
 					<script type="IN/Share" data-url="https://www.linkedin.com/company/warp-code/"></script>
 
 					</div>
-			
+		
 
 	</footer>
 
@@ -386,11 +386,11 @@
 	<script src="js/jquery.jInvertScroll.js"></script>
 	<script src="js/scriptMin.js"></script>
 	<script src="https://apis.google.com/js/platform.js" async defer></script>
-	<script async src="https://platform.twitter.com/widgets.js" async defer></script>
-	<script src="//platform.linkedin.com/in.js" type="text/javascript" async defer> lang: fr_FR</script>
+	<script async src="https://platform.twitter.com/widgets.js" ></script>
+	<script src="//platform.linkedin.com/in.js"> lang: fr_FR</script>
 		
 		
-	<script type="text/javascript">
+	<script>
 		(function ($) {
 			$.jInvertScroll(['.scroll'], // an array containing the selector(s) for the elements you want to animate
 				{
