--- a/videos/index.html
+++ b/videos/index.html
@@ -36,7 +36,7 @@
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/styleMin.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
@@ -217,7 +217,7 @@
 							</p>
 							
 							<h3>Nous créons des projets adaptés à vos besoins.</h3>
-							<!-- <p><a class="goToServ" href="https://www.warp-code.fr/siteA.html">Plus d'infos...</a></p>  -->
+							<!-- <p><a class="goToServ" href="https://www.warp-code.fr/app/services.html">Plus d'infos...</a></p>  -->
 						</div>
 					</article>
 					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
