--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!--================================================== CSS  ================================================== -->
-	<link rel="stylesheet" href="css/styleMin.css" />
+	<link rel="stylesheet" href="css/styleMinKo.css" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" >
@@ -66,11 +66,12 @@
 	<nav class="menu">
 		<div class="logo"></div>
 		<ul>
-			<li class="close-menu"><a href="#home" title="Retour en haut de page">Accueil</a></li>
-			<li class="close-menu"><a href="#services" title="Accès à la section Services">Services</a></li>
-			<li class="close-menu"><a href="#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
-			<li class="close-menu"><a href="#contactForm" title="Accès aux informations de contact">Contact</a></li>
-		</ul>
+				<li class="close-menu"><a href="index.html" title="Retour en haut de page">Accueil</a></li>
+				<li class="close-menu"><a href="services.html" title="Accès à la section Services">Services</a></li>
+				<li class="close-menu"><a href="offres.html" title="Accès à la section Services">Offres</a></li>
+				<li class="close-menu"><a href="index.html#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
+				<li class="close-menu"><a href="index.html#contactForm" title="Accès aux informations de contact">Contact</a></li>
+			</ul>
 	</nav>
 	<div class="burger">
 		<svg width="100px" height="100px">
@@ -109,7 +110,7 @@
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+							<svg version="1.1" id="svg-icon-1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 							 x="0px" y="0px" width="60px" height="60px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<g>
 									<rect fill="none" stroke="#000000" stroke-width="1" stroke-miterlimit="10" x="8" y="8.7" class="st0" width="46"
@@ -140,7 +141,7 @@
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+							<svg version="1.1" id="svg-icon-2"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 							 x="0px" y="0px" width="80px" height="80px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<g>
 									<polyline fill="none" stroke="#000000" stroke-width="1" stroke-miterlimit="10" points="4.3,9.7 4.3,7.7 11,7.7 19.6,29.7 41.6,29.7 46.9,15.4 17.6,11     " />
@@ -293,7 +294,7 @@
 			<div class="teamCard">
 
 				<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
-					<div class="card"><img src="images/teamA.png" alt="Photo portrait de Sébastien" />
+					<div class="card"><img src="images/team1.png" alt="Photo portrait de Sébastien" />
 						<div class="info">
 							<h4>Créative développeur</h4>
 							<p class="textCard">39 ans
@@ -312,7 +313,7 @@
 					<h4>Sébastien Champalaune</h4>
 				</article>
 				<article class="four columns cardFlo" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
-					<div class="card"><img src="images/teamB.png" alt="Photo portrait de Florent" />
+					<div class="card"><img src="images/team2.png" alt="Photo portrait de Florent" />
 						<div class="info">
 							<h4>Développeur front / back end</h4>
 							<p class="textCard">37 ans
